--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-responsive": "^10.0.1",
     "react-router-dom": "^7.6.3",
+    "react-scroll": "^1.9.3",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
